ajuste no icones do header

--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -59,16 +59,16 @@
         <div class="container-icons">
             <div class="support-btn" *ngIf="isMobile && (whatsapp || isDemo)">
                 <a *ngIf="isDemo" target="_blank" href="https://materiais.wee.bet/demo-weebet">
-                    <i class="material-symbols-outlined">headset_mic</i>
+                    <i class="material-symbols-outlined material-symbols-outlined-headset_mic"></i>
                 </a>
                 <a *ngIf="!isDemo && whatsapp" target="_blank" href="https://api.whatsapp.com/send?phone=55{{whatsapp}}">
-                    <i class="material-symbols-outlined">headset_mic</i>
+                    <i class="material-symbols-outlined material-symbols-outlined-headset_mic"></i>
                 </a>
             </div>
-            <a *ngIf="xtremepushHabilitado" (click)="notificationsXtremepush()" class="btn-xtremepush" role="button">
+            <a style="color: #ffffff;" *ngIf="xtremepushHabilitado" (click)="notificationsXtremepush()" class="btn-xtremepush" role="button">
                 <div id="badge-xtremepush"></div>
                 <div class="icon-xtremepush">
-                    <i class="material-symbols-outlined">notifications</i>  
+                    <span style="margin-top: 4px;" class="material-symbols-outlined material-symbols-outlined-notifications"></span>  
                 </div>
             </a>
             <div id="overlay" class="overlay" (click)="closeNotifications()" [class.open]="notificationsXtremepushOpen"></div>
@@ -76,10 +76,9 @@
                 <div class="xtremepush-header">
                     <h4 class="xtremepush-title">
                         <div style="display: flex;">
-                            <span id="icon-xtremepush" class="material-symbols-outlined stylingNotificationIcon">notifications</span>
+                            <span id="icon-xtremepush" class="material-symbols-outlined material-symbols-outlined-notifications stylingNotificationIcon"></span>
                             <span style="vertical-align: middle;">Notificações</span>
                         </div>
-                        
                     </h4>
                     <a type="button" class="btn-close-xtremepush" aria-label="Close" (click)="notificationsXtremepush()">
                         <i class="fa fa-times"></i>
@@ -87,11 +86,10 @@
                 </div>
                 <div id="xtremepushNotificationContainer"></div>
             </div>
-            
             <div class="btn-promocao" *ngIf="paginaPromocaoHabilitado">
                 <a [routerLink]="['/promocao']" routerLinkActive="active">
                     <div class="btn-promocao">
-                        <i class="material-symbols-outlined">featured_seasonal_and_gifts</i>
+                        <i class="material-symbols-outlined material-symbols-outlined-featured_seasonal_and_gifts hidingIconText"></i>
                     </div>
                 </a>
             </div>
