--- a/src/app/shared/layout/header/header.component.css
+++ b/src/app/shared/layout/header/header.component.css
@@ -480,6 +480,27 @@ body .change-theme {
     margin-top: -2px;
 }
 
+.material-symbols-outlined::before {
+    font-family: 'Material Symbols Outlined';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 22px;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.material-symbols-outlined-headset_mic::before {
+    content: 'headset_mic';
+}
+
+.material-symbols-outlined-notifications::before {
+    content: 'notifications';
+}
+
+.material-symbols-outlined-featured_seasonal_and_gifts::before {
+    content: 'featured_seasonal_and_gifts';
+}
+
 @media only screen and (min-width: 1025px) {
     .btn-indique-ganhe-card:hover {
         padding: 0 15px !important;
