--- a/src/app/home/widgets/jogos-aovivo/jogos-aovivo.component.html
+++ b/src/app/home/widgets/jogos-aovivo/jogos-aovivo.component.html
@@ -75,7 +75,10 @@
                                         <ng-template #noLock>
                                             <div class="cotacao"
                                             (click)="addCotacao(jogo.value, cotacao); $event.stopPropagation()" [ngClass]="{'selecionado': oddSelecionada(jogo.value._id, cotacao.chave)}">
-                                                <label>{{ cotacao.nome }}</label>
+                                                <label
+                                                 [ngClass]="{'odd-up': cotacao.oddChange == 'up', 'odd-down': cotacao.oddChange == 'down'}"
+                                                >
+                                                {{ cotacao.nome }}</label>
                                                 <span>{{ cotacao.valorFinal}}</span>
                                             </div>
                                         </ng-template>
