--- a/src/app/clientes/apostas-cliente/apostas-cliente.component.html
+++ b/src/app/clientes/apostas-cliente/apostas-cliente.component.html
@@ -91,6 +91,7 @@
                             <th>{{'geral.horario' | translate}}</th>
                             <th>{{'geral.valor' | translate}}</th>
                             <th>{{'geral.premio' | translate}} </th>
+                            <th>{{'geral.estado' | translate}}</th>
                             <th></th>
                         </tr>
                         </thead>
@@ -106,6 +107,11 @@
                             <td>{{ aposta.horario | moment: 'DD/MM/YYYY HH:mm' }}</td>
                             <td>{{ aposta.valor | currency}}</td>
                             <td>{{ aposta.premio | currency }}</td>
+                            <td>
+                                <div *ngIf="aposta.rollover_status == 'cancelado'">Bônus Cancelado</div>
+                                <div *ngIf="aposta.resultado == null && aposta.rollover_status != 'cancelado'">Aguardando</div>
+                                <div *ngIf="aposta.rollover_status != 'cancelado' && aposta.resultado != null">{{aposta.resultado}}</div>
+                            </td>
                             <td class="acoes-aposta" *ngIf="tabSelected !== 'cassino' && tabSelected !== 'loteria-popular'">
                                 <a *ngIf="isCliente && aposta.tipo === 'esportes'" href="https://{{slug}}/bilhete/{{aposta.codigo}}{{origin}}" target="_blank" title="ACOMPANHAR BILHETE AO-VIVO" >
                                     <i class="fa fa-external-link"></i>
@@ -115,6 +121,11 @@
                                 </a>
                             </td>
                         </tr>
+                        <div class="loading-scroll" *ngIf="loadingScroll">
+                            <div class="alert alert-warning text-center" role="alert">
+                                Carregando...
+                            </div>
+                        </div>
                         </tbody>
                     </table>
                 </div>
