ajustes css para betby

--- a/src/app/betby/betby.component.css
+++ b/src/app/betby/betby.component.css
@@ -1,6 +1,7 @@
 main {
     padding-top: 92px;
-    min-height: calc(100vh - 292px);
+    min-height: 100vh;
+    position: relative;
 }
 
 @media only screen and (max-width: 1280px) {
