comentar overflow para corrigir scroll do betby no iphone

--- a/src/styles.css
+++ b/src/styles.css
@@ -1950,9 +1950,9 @@ label {
         margin: 0;
     }
 
-    @supports (-webkit-touch-callout: none) {
-        body {
-            overflow: hidden;
-        }
-    }
+    /* @supports (-webkit-touch-callout: none) { */
+    /*     body { */
+    /*         overflow: hidden; */
+    /*     } */
+    /* } */
 }
