--- a/src/app/casino/wall/components/wall-game-card/wall-game-card.component.scss
+++ b/src/app/casino/wall/components/wall-game-card/wall-game-card.component.scss
@@ -147,7 +147,7 @@
     margin-top: 0;
 }
 
-@media only screen and (min-width: 360px)  and (max-width: 375px) {
+@media only screen and (min-width: 360px)  and (max-width: 390px) {
     .game-card {
         width: 100%;
 
@@ -168,18 +168,42 @@
     }
 }
 
-@media only screen and (min-width: 425px){
+@media only screen and (min-width: 400px) and (max-width: 420px){
     .game-card--inline{
-        width: 200px;
+        width: 175px;
+    }
+
+    .game-card--inline > .game-card__image{
+        min-height: 175px;
     }
 
     .game-card{
         &--default {
-            width: 200px;
+            width: 185px;
         }
 
         &__image{
-            min-height: 200px;
+            min-height: 185px;
+        }
+    }
+}
+
+@media only screen and (min-width: 425px){
+    .game-card--inline{
+        width: 180px;
+    }
+
+    .game-card--inline > .game-card__image{
+        min-height: 180px;
+    }
+
+    .game-card{
+        &--default {
+            width: 195px;
+        }
+
+        &__image{
+            min-height: 195px;
         }
     }
 }
@@ -197,7 +221,7 @@
 @media only screen and (min-width: 687px) and (max-width: 850px){
     .game-card{
         &--default {
-            width: calc((100vw / 4) - 12px);
+            width: 180px;
             min-height: 144px;
         }
     }
@@ -217,7 +241,7 @@
         width: 100%;
 
         &--default {
-            width: calc((100vw / 5) - 12.8px);
+            width: 190px;
         }
 
         &--inline {
@@ -227,37 +251,33 @@
     }
 
     .game-card--default > .game-card__image {
-        min-height: 192px;
+        min-height: 190px;
         height: auto;
     }
 }
 
-@media only screen and (min-width: 1025px) {
+@media only screen and (min-width: 1024px) {
     .game-card {
         width: 100%;
 
-        &--inline {
-            min-width: 200px;
-            max-width: 200px;
-        }
-
         &--default {
             width: 100%;
-            max-width: 165px;
+            max-width: 190px;
         }
 
         &--filter {
             width: 100%;
         }
 
-        &__image {
-            min-height: 200px;
-            height: auto;
-        }
+    }
+
+    .game-card--inline{
+        min-width: 180px;
+        max-width: 180px;
     }
 
     .game-card--default > .game-card__image {
-        min-height: 165px;
+        min-height: 190px;
         height: auto;
     }
 
@@ -268,6 +288,17 @@
     .game-button--demo,
     .game-button--play {
         height: 42px !important;
+    }
+}
+
+@media only screen and (min-width: 1100px) and (max-width: 1190px) {
+    .game-card--default{
+        width: 100%;
+        max-width: 200px;
+    }
+
+    .game-card--default > .game-card__image {
+        min-height: 200px;
     }
 }
 
@@ -298,11 +329,33 @@
 @media only screen and (min-width: 1600px) {
     .game-card--default{
         width: 100%;
-        max-width: 190px;
+        max-width: 200px;
     }
 
     .game-card--default > .game-card__image {
-        min-height: 190px;
-        height: auto;
+        min-height: 200px;
+    }
+}
+
+
+@media only screen and (min-width: 2300px) {
+    .game-card{
+        &--default{
+            width: 100%;
+            max-width: 200px;
+        }
+
+        &--inline{
+            min-width: 200px;
+            max-width: 200px;
+        }
+    }
+
+    .game-card--inline > .game-card__image{
+        min-height: 200px;
+    }
+
+    .game-card--default > .game-card__image{
+        min-height: 200px;
     }
 }
