--- a/src/app/casino/wall/components/wall-game-card/wall-game-card.component.scss
+++ b/src/app/casino/wall/components/wall-game-card/wall-game-card.component.scss
@@ -236,7 +236,7 @@
     }
 }
 
-@media only screen and (min-width: 884px){
+@media only screen and (min-width: 884px) and (max-width: 1020px){
     .game-card {
         width: 100%;
 
@@ -245,12 +245,16 @@
         }
 
         &--inline {
-            min-width: 200px;
-            max-width: 200px;
+            min-width: 190px;
+            max-width: 190px;
         }
     }
 
     .game-card--default > .game-card__image {
+        min-height: 190px;
+    }
+
+    .game-card--inline > .game-card__image {
         min-height: 190px;
         height: auto;
     }
